style: fix button content gap

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -128,5 +128,5 @@ form
     color: $blue-grey-8
     font-weight: 500
 .q-btn__content
-  gap: 8px
+  gap: 4px
 
